--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Infinity IT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">INFINITY IT</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -54,7 +50,7 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Teknik, drift och programmering<br />
+								<h2>Teknik, drift och utveckling<br />
 							    </h2>
 								<p>Vi har lång och omfattande erfarenhet inom IT teknik, utveckling och support och hjälper dig med lösningar och drift inom dessa områden.</p>
 							</header>
@@ -74,7 +70,7 @@
 								</h2>
 								<p>Vi kan hjälpa till med sökoptimering på befintliga sidor eller hjälpa dig att skapa en ny landningssida med målet att synas högt upp på Google sökningar.<br />
 									Detta görs genom en optimal teknisk uppbyggnad och sökordsoptimering (SEO) </p>
-									<p>Vår specialité är att skapa enkla och tydliga landningssidor för våra kunder utan onödiga texter och bilder. Vi kodar, skriver och designar landningssidan specifikt för just
+									<p>Vår specialité är att skapa enkla och tydliga och framför allt <strong>snabba</strong> landningssidor för våra kunder utan onödiga texter och bilder. Vi kodar, skriver och designar landningssidan specifikt för just
 										ditt företag. Det ska vara enkelt att få information om verksamheten och se proffsigt och stilrent ut.
 									</p>
 							</div>
@@ -107,7 +103,7 @@
 						<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 						<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 						<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:info@infinity-it.se" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Infinity IT 2021</li>
