--- a/om.html
+++ b/om.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Elements - Spectral by HTML5 UP</title>
+		<title>Infinity IT - Om</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Hem</a></h1>
+						<h1><a href="index.html">INFINITY IT -Om</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -63,7 +59,7 @@
 		<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 		<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 		<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-		<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+		<li><a href="mailto:info@infinity-it.se" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 	</ul>
 	<ul class="copyright">
 		<li>&copy; Infinity IT 2021</li>
