--- a/kontakt.html
+++ b/kontakt.html
@@ -132,7 +132,7 @@
 							url: actionurl,
 							type: 'post',
 							dataType: 'application/json',
-							data: $("#myform").serialize(),
+							data: $("#theForm").serialize(),
 							success: function(data) {
 								setMess('Meddelande inte skickat.', true);
 							},
