--- a/services.html
+++ b/services.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Generic - Spectral by HTML5 UP</title>
@@ -47,12 +43,14 @@
 							<div class="inner">
 
 								<h3>Våra olika tjänster.</h3>
-								<p>Vi utför service av hög nivå, lyssnar och försöker att anpassar våra tjänster till dig som kund i hög grad. </p>
-								<ul> 	<li>&#9830;  Programmering</li> 
-										<li> &#9830;  SEO sökoptimering</li>
+								<p>Vi utför service av hög nivå, lyssnar och anpassar våra tjänster till dig som kund i högsta grad. Vi lovar inget vi inte kan leverera.<br>
+								Vi utför tjänster i bland annat dessa områden: </p>
+								<ul style="list-style-type: none;"> 
+										<li>&#9830;  Frontend och Backendutveckling</li> 
+										<li>&#9830;  SEO sökoptimering</li>
 										<li>&#9830;  Arbetsplatsstationer </li>
 										<li>&#9830;  Nätverkstjänster </li>    
-										<li>&#9830;  Hemsidor </li> 
+										<li>&#9830;  Apputveckling</li> 
 										<li>&#9830;  Content writing </li> 
 										<li>&#9830;  Administration </li> 
 
@@ -65,11 +63,7 @@
 				<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
-						<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-						<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-						<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Infinity IT 2021</li>
