--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic1.jpg" alt="" /></div><div class="content">
-								<h2>SEO sökoptimering<br />
+								<h2>Sökoptimering (SEO)<br />
 								</h2>
 								<p>Vi kan hjälpa till med sökoptimering på befintliga sidor eller hjälpa dig att skapa en ny landningssida med målet att synas högt upp på Google sökningar.<br />
 									Detta görs genom en optimal teknisk uppbyggnad och sökordsoptimering (SEO) </p>
