--- a/services.html
+++ b/services.html
@@ -50,6 +50,8 @@
 										<li>&#9830;  Arbetsplatsstationer </li>
 										<li>&#9830;  Nätverkstjänster </li>    
 										<li>&#9830;  Apputveckling</li> 
+										<li>&#9830;  AI-driven automatisering</li>
+										<li>&#9830;  Träning av AI modeller</li>
 										<li>&#9830;  Content writing </li> 
 										<li>&#9830;  Administration </li> 
 
